fix: prevent input overflow

--- a/src/content.less
+++ b/src/content.less
@@ -362,6 +362,11 @@
         &-section {
           padding-bottom: 10px;
         }
+
+        /* inputs for access token & shortcut were too wide */
+        input.form-control {
+          min-width: 100px;
+        }
       }
       .access-token {
         border-bottom: none; // prevent overwrite by github style
